--- a/to_do_list/src/Components/Home/Home.css
+++ b/to_do_list/src/Components/Home/Home.css
@@ -7,14 +7,22 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 12%;
+  margin-top: 10%;
+  padding: 2%;
 }
 .myList {
-  padding: 5%;
+  margin-top: -15%;
+  margin-left: 12%;
+  padding-right: 5%;
+  padding-left: 5%;
+  padding-bottom: 5%;
 }
 .myInput {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+.theImage {
+  width: 50%;
 }
