--- a/to_do_list/src/Components/Home/Home.css
+++ b/to_do_list/src/Components/Home/Home.css
@@ -7,7 +7,7 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 10%;
+  margin-top: 5%;
   padding: 2%;
 }
 .myList {
@@ -25,4 +25,7 @@
 }
 .theImage {
   width: 50%;
+}
+.addIcon {
+  margin-left: 3%;
 }
