controlled component functionality

--- a/to_do_list/src/Components/Home/Home.css
+++ b/to_do_list/src/Components/Home/Home.css
@@ -29,3 +29,9 @@
 .addIcon {
   margin-left: 3%;
 }
+.theList h1 {
+  border: 1px solid #cacad8;
+  padding: 9px;
+  width: 86%;
+  border-radius: 5px;
+}
